--- a/p/index.html
+++ b/p/index.html
@@ -543,7 +543,7 @@
                 <span class="prt-icon zoom-icon" style="--i: 0s">
                   <i class="uil uil-search-plus"></i>
                 </span>
-                <a href="#" class="prt-icon" style="--i: .15s">
+                <a href="https://whoisushneet.github.io/angularMobileApp_assign4/" target="_blank" rel="noreferrer noopener" class="prt-icon" style="--i: .15s">
                   <i class="uil uil-link-h"></i>
                 </a>
               </div>
